recentered .module-area - attempted to fix module overflow

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -49,6 +49,8 @@ $footerHeight: 50px;
 
 .modules-area {
     width: 1000px;
+    margin: 0 auto;
+    margin-bottom: -$footerHeight;
     .module {
         background: rgba(0,0,0,0.4);
         margin: 10px;
